test/resources/invalid/typecheck/InvalidInsufficicentNetworkParameters.flo
action GET_ALL_POSTS = network(method = 'GET');

flow POSTS = {
    string[] posts = [];
    GET_ALL_POSTS >> posts;
}
